# model-deployments

./: .gitignore  README.md  pyproject.toml  requirements.txt
German-distilBERT/model/: config.json
German-distilBERT/predict/: __init__.py
GermanBert/: requirements.txt
GermanBert/predict/: __init__.py
GermanBert/tests/: test_german_bert.py
Icelandic-NER-base/: requirements.txt
IsRoBERTa/: .funcignore  .gitignore
IsRoBERTa/predict/: __init__.py
IsRoBERTa/tests/: test_isroberta.py
QA_en/: pyproject.toml
QA_en/predict/: __init__.py  onnx_utils.py
QA_en/tests/: test_onnx.py
tests/: test_german_bert.py
xlm-roberta-lm-mask/predict/: __init__.py
